# lenke

./: .editorconfig  .gitignore  .oxfmtrc.json  .oxlintrc.json  NOTICE  README.md  bun.lockb  nx.json  package.json  rustfmt.toml  tsconfig.base.json  tsconfig.json
.cargo/: config.toml
.claude/: settings.json
.dogfood/elena/: migrate.ts
.dogfood/maya/: core.ts  dom-setup.ts  hooks.test.tsx  tsconfig.json
.dogfood/priya/: bonus.ts  tasks.ts
.dogfood/raj/: probe.js  seed.js  service.js
.dogfood/round2/elena/: migrate.ts
.dogfood/round2/maya/: data.ts  happydom.ts  notes-store.ts  react-app.tsx  run-react.tsx  run-store.ts  tsconfig.check.json
.dogfood/round2/priya/: main.ts  port-test.ts  server.ts  snapshot-test.ts  wire.ts
.dogfood/round2/raj/: probe.mjs  seed.mjs  service.mjs
.dogfood/round2/tomas/: impact.ts
.dogfood/round3/amara/: gqltest.ts  kanban.ts  smoke.ts
.dogfood/round3/diego/: dashboard.ts  divergence-check.ts  gen-data.ts  probe.ts
.dogfood/round3/nadia/: ontology.ts
.dogfood/round3/sven/: gen-fixtures.ts  importer.ts  main.ts  paired-csv.ts
.dogfood/round3/yuki/: app.tsx  happydom.ts  history.ts  mindmap.ts  tsconfig.json
.dogfood/round4/kenji/: canvas.ts  restore-check.ts
.dogfood/round4/lena/: demo.ts  migrate.ts  query.ts  repository.ts  schema.ts
.dogfood/round4/marcus/: algo_ts_bench.ts  analytics.ts  docs_check.ts  gen.ts  pagerank_bench.ts  probe.ts  probe2.ts  probe3.ts  smoke.ts
.dogfood/round4/priyanka/: authz.ts  gen.ts  gremlin-probe.ts  memcheck.ts  merge-ingest.ts  perf.ts  perf2.ts  perf3.ts  perf4.ts  probe.ts  sync-replica.ts
.dogfood/round4/sofia/: demo.ts  temporal.ts
.dogfood/round5/_triage/: csv_null_repro.ts
.dogfood/round5/hana/: build-data.ts  convert.ts  probe-edge.ts  probe-fns.ts  probe2.ts  probe3.ts  probe4.ts  probe5.ts  probe6.ts  queries.ts  smoke.ts
.dogfood/round5/ingrid/: csv-diff.ts  csv-header-corruption.ts  csv-null-in-list.ts  dangling-edge.ts  malformed.ts  ndj-check.ts  pipeline.ts  smoke.ts  value-matrix.ts
.dogfood/round5/omar/: 00-stats.ts  01-cooccurrence.ts  02-cooccurrence-gremlin.ts  03-gremlin-topn-workaround.ts  04-group-reducer-bug.ts  04b-sum-reducer.ts  05-personalized.ts  06-category-having-sim.ts  07-gremlin-rank-attempts.ts  08-project-crash.ts  08b-project-correct.ts  09-gremlin-personalized.ts  10-gql-probes.ts  11-avg-verify.ts  data.ts  smoke.ts
.dogfood/round5/wei/: 01_search.ts  02_ranking.ts  03_facets.ts  04_orderby_agg.ts  05_strings.ts  06_native_divergence.ts  07_gremlin_facets.ts  08_edges.ts  09_groupkey_divergence.ts  10_orderby_agg_native.ts  11_skip_limit_param.ts  corpus.ts  feature.ts  findings.md  smoke.ts  t_corpus.ts
.dogfood/round5/yuki/: 01-smoke.ts  02-presence.ts  03-reconnect.ts  04-crownjewel.ts  05-robustness.ts  findings.md  lib.ts
.dogfood/round6/anouk/: 01-branching.ts  02-path.ts  03-loops.ts  04-aggregation.ts  05-projection.ts  06-mutation.ts  07-predicates-branch.ts  08-until-placement.ts  09-misc.ts  findings.md  (+5 more)
.dogfood/tomas/: impact.ts
.github/workflows/: ci.yml
.zed/: settings.json
benchmarks/: .gitignore  compare.ts  datagen.ts  index-bench.ts  interleave-bench.ts  report.html  report.ts  results.json  rust.ts  smoke.test.ts  write-bench.ts
conformance/: codec-corpus.json
crates/lenke-core/: Cargo.toml  README.md  arrow-ffi.test.ts  ffi-error.test.ts  ffi-smoke.test.ts  gremlin-ffi.test.ts  project.json  rust-toolchain.toml
crates/lenke-core/examples/: algo_bench.rs  call_bench.rs  cdc_extract_bench.rs  count_check.rs  edge_type_index_bench.rs  eval_vs_columnar.rs  gql_bench.rs  gremlin_bench.rs  gremlin_index_bench.rs  mem_probe.rs  perf_bench.rs  scale_bench.rs  storage_probe.rs  temporal_bench.rs
crates/lenke-core/src/: arrow.rs  error.rs  error_codes.rs  ffi.rs  ffi_error.rs  graph.rs  json.rs  jsonfmt.rs  lib.rs  ndjson.rs  query.rs  temporal.rs
crates/lenke-core/src/algo/: centrality.rs  components.rs  degree.rs  label_prop.rs  mod.rs  pagerank.rs  peer_pressure.rs  scc.rs  shortest_path.rs
crates/lenke-core/src/codec/: conformance.rs  csv.rs  graphson.rs  mod.rs  pg_json.rs  pg_text.rs
crates/lenke-core/src/gql/: ast.rs  eval.rs  lexer.rs  mod.rs  params.rs  parser.rs  plan.rs  ported_gql_hardening.rs  ported_gql_index_seed.rs  ported_gql_main.rs  ported_gql_operator_chains.rs  temporal_differential.rs  tests.rs
crates/lenke-core/src/gremlin/: exec.rs  mod.rs  parse.rs  ported_1.rs  ported_2.rs  ported_3.rs  ported_4.rs  ported_5.rs  ported_6.rs  ported_divergences.rs  tests.rs
crates/pl-graph-core/: Cargo.toml  README.md  arrow-ffi.test.ts  ffi-error.test.ts  ffi-smoke.test.ts  gremlin-ffi.test.ts  project.json
crates/pl-graph-core/examples/: bench.rs  edge_type_index_bench.rs  eval_vs_columnar.rs  gql_bench.rs  gremlin_bench.rs  gremlin_index_bench.rs  mem_probe.rs  scale_bench.rs  storage_probe.rs
crates/pl-graph-core/src/: arrow.rs  error.rs  error_codes.rs  ffi.rs  ffi_error.rs  graph.rs  lib.rs  ndjson.rs  query.rs  scan.rs
crates/pl-graph-core/src/codec/: conformance.rs  csv.rs  graphson.rs  mod.rs  pg_json.rs  pg_text.rs
crates/pl-graph-core/src/gql/: ast.rs  eval.rs  lexer.rs  mod.rs  parser.rs  plan.rs  ported_gql_index_seed.rs  ported_gql_main.rs  ported_gql_misc.rs  ported_gql_tck.rs  tests.rs
crates/pl-graph-core/src/gremlin/: exec.rs  mod.rs  parse.rs  ported_2.rs  ported_3.rs  ported_4.rs  ported_5.rs  ported_6.rs  ported_divergences.rs  tests.rs
docs/design/: conflict-resolution.md  gql-extensions.md  r-tx.md  temporal-deboxing.md
docs/dogfood/: DESIGN-DECISIONS-MORNING.md  README.md  ROADMAP.md
docs/guides/: algorithms.md  backend-embedded.md  bitemporal.md  choosing-your-build.md  frontend-main-thread.md  frontend-worker.md  index.md  native.md  pure-ts.md  wasm.md
examples/explorer/: .gitignore  README.md  index.html  package.json  playwright.config.ts  vite.config.ts
examples/service-map/: .gitignore  README.md  datagen.ts  dev.ts  index.html  package.json  playwright.config.ts  server.test.ts  server.ts  vite-env.d.ts  vite.config.ts  worker.ts
(+101 files in other folders)
