[package]
name = "lenke-core"
version = "0.1.0"
edition = "2021"
description = "Columnar labeled-property-graph core: in-memory columnar graph with ISO-GQL and Gremlin engines, serialization codecs, and an Arrow result surface, behind a C ABI (bun:ffi / wasm)."
license = "Apache-2.0"

# Lint policy. The default clippy groups (kept clean), plus a hand-picked set of
# stricter lints. We deliberately avoid `clippy::pedantic` wholesale — its cast
# lints fire constantly on the columnar u32/usize/f64 conversions and bury the
# signal — so these are the low-noise, high-value picks. Enforce in CI with
# `cargo clippy --all-targets -- -D warnings`.
[lints.clippy]
all = { level = "warn", priority = -1 }
# Require a `// SAFETY:` justification on every `unsafe` block (FFI-heavy crate).
undocumented_unsafe_blocks = "warn"
# Readability / modernization (low-noise picks).
uninlined_format_args = "warn"
use_self = "warn"
# Deliberately excluded as net-noise for this type-dispatch-heavy codebase:
#   doc_markdown                       — 50+ capitalized-word false positives
#   missing_const_for_fn (nursery)     — mostly pointless `const` churn
#   redundant_closure_for_method_calls — path-vs-closure is a wash
#   match_same_arms                    — false-positives on Val/GVal dispatch arms
#                                        that share a trivial body but can't merge

# `lib` for unit tests, examples, and the wasm build; `cdylib` for the native
# dynamic library loaded over FFI. Same crate, both bindings.
[lib]
crate-type = ["lib", "cdylib"]

# Dependencies are kept minimal (and optional) so the crate builds fully offline
# and a minimal (e.g. wasm) build can drop everything it doesn't use.

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
# rayon is optional so the crate builds for wasm32 (browser, no threads):
# `--no-default-features` drops it and decode falls back to a serial parse.
rayon = { version = "1.12.0", optional = true }
# serde_json is optional: only the JSON-carrying surfaces (gremlin results, the
# ndjson + extra codecs) pull it in. A minimal frontend build (GQL only) drops
# it entirely — the core query path hand-rolls its JSON (see `query::to_json`).
serde_json = { version = "1.0.150", optional = true }
# The gremlin `regex()` predicate (pulled in by the `gremlin` feature). Linear-
# time (no catastrophic backtracking); no backreferences/lookaround — a narrow,
# documented divergence from JS `RegExp`/Java `Pattern` (see
# packages/gremlin/GAPS.md). `default-features = false` drops the SIMD `perf`
# extras to keep the wasm/frontend build lean while retaining Unicode-aware
# classes for JS parity.
regex = { version = "1", default-features = false, features = ["std", "unicode"], optional = true }

[features]
# Composable feature set so a minimal build ships only what it uses (the binary
# shrinks with each capability dropped — `serde_json` especially). `default =
# full` is all-inclusive.
default = ["full"]
full = ["gql", "gremlin", "ndjson", "codecs", "arrow", "parallel"]

# Internal marker (leading `_` = not a public knob): enabled by every surface
# whose `lnk_*` FFI fns record a last-error report, so `ffi_error`'s setters gate
# on one `cfg(feature = "_fallible-ffi")` instead of repeating the surface union.
# arrow→gql and codecs→ndjson pull it in transitively.
_fallible-ffi = []

# `gql`: the ISO-GQL engine (hand-rolled parser; carries NO serde_json).
gql = ["_fallible-ffi"]
# `gremlin`: the Gremlin traversal engine (heterogeneous JSON results). Its JSON
# carrier is hand-rolled via `jsonfmt`, so it carries NO serde_json.
gremlin = ["dep:regex", "_fallible-ffi"]
# `ndjson`: the NDJSON load/snapshot codec.
ndjson = ["dep:serde_json", "_fallible-ffi"]
# `codecs`: the extra serialization formats (pg-json/pg-text/graphson/csv); the
# combined dispatch also covers ndjson, so it implies it.
codecs = ["ndjson", "dep:serde_json"]
# `arrow`: the Apache Arrow columnar result surface (binary; no serde_json). The
# Arrow output is a query-result format, so it needs the GQL engine.
arrow = ["gql"]

# `parallel`: rayon for bulk ndjson decode (a load-time win, no tradeoff).
parallel = ["dep:rayon"]
# `parallel-query`: intra-query threading (parallel projection eval). Opt-in and
# off by default — it trades throughput for single-query latency, so it's a
# deliberate choice, not a default.
parallel-query = ["parallel"]
