[package]
name = "pl-graph-core"
version = "0.1.0"
edition = "2021"
description = "Columnar LPG core with SIMD-accelerated bulk index build (experiment)"

# `lib` for unit tests / examples / the future WASM build; `cdylib` for the
# native dynamic library that bun:ffi loads. Same crate, both bindings.
[lib]
crate-type = ["lib", "cdylib"]

# No external dependencies on purpose: NEON is mandatory baseline on aarch64
# (no runtime feature detection needed), so the SIMD kernels use std::arch
# directly and the crate builds fully offline.

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
# rayon is optional so the crate builds for wasm32 (browser, no threads):
# `--no-default-features` drops it and decode falls back to a serial parse.
rayon = { version = "1.12.0", optional = true }
serde_json = "1.0.150"

[features]
default = ["parallel"]
# `parallel`: rayon for bulk ndjson decode (a load-time win, no tradeoff).
parallel = ["dep:rayon"]
# `parallel-query`: intra-query threading (parallel projection eval). Opt-in and
# off by default — it's a single-query *latency* lever that trades throughput on
# a busy server, so it's a deliberate deployment choice, not a default.
parallel-query = ["parallel"]
