[package]
name = "pl-graph-core"
version = "0.1.0"
edition = "2021"
description = "Columnar LPG core with SIMD-accelerated bulk index build (experiment)"

# `lib` for unit tests / examples / the future WASM build; `cdylib` for the
# native dynamic library that bun:ffi loads. Same crate, both bindings.
[lib]
crate-type = ["lib", "cdylib"]

# No external dependencies on purpose: NEON is mandatory baseline on aarch64
# (no runtime feature detection needed), so the SIMD kernels use std::arch
# directly and the crate builds fully offline.

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
# rayon is optional so the crate builds for wasm32 (browser, no threads):
# `--no-default-features` drops it and decode falls back to a serial parse.
rayon = { version = "1.12.0", optional = true }
# serde_json is optional: only the JSON-carrying surfaces (gremlin results, the
# ndjson + extra codecs) pull it in. A minimal frontend build (GQL only) drops
# it entirely — the core query path hand-rolls its JSON (see `query::to_json`).
serde_json = { version = "1.0.150", optional = true }

[features]
# Composable feature set so a frontend wasm build can ship only what it uses
# (the binary shrinks with each capability dropped — `serde_json` especially).
# `default = full` keeps the server/CLI build all-inclusive.
default = ["full"]
full = ["gql", "gremlin", "ndjson", "codecs", "arrow", "parallel"]

# `gql`: the ISO-GQL engine (hand-rolled parser; carries NO serde_json).
gql = []
# `gremlin`: the Gremlin traversal engine (heterogeneous JSON results).
gremlin = ["dep:serde_json"]
# `ndjson`: the NDJSON load/snapshot codec.
ndjson = ["dep:serde_json"]
# `codecs`: the extra serialization formats (pg-json/pg-text/graphson/csv); the
# combined dispatch also covers ndjson, so it implies it.
codecs = ["ndjson", "dep:serde_json"]
# `arrow`: the Apache Arrow columnar result surface (binary; no serde_json). The
# Arrow output is a query-result format, so it needs the GQL engine.
arrow = ["gql"]

# `parallel`: rayon for bulk ndjson decode (a load-time win, no tradeoff).
parallel = ["dep:rayon"]
# `parallel-query`: intra-query threading (parallel projection eval). Opt-in and
# off by default — it's a single-query *latency* lever that trades throughput on
# a busy server, so it's a deliberate deployment choice, not a default.
parallel-query = ["parallel"]
